--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edgemony-react-2021",
   "version": "0.1.0",
-  "homepage": "https://fablizio.github.io/facebrutproject/",
+  "homepage": "https://github.com/Fablizio/facebrutproject",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -10,6 +10,7 @@
     "date-fns": "^2.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "sass": "^1.45.0",
     "web-vitals": "^1.1.2"
