--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "edgemony-react-2021",
+  "name": "react-social-app",
   "version": "0.1.0",
-  "homepage": "https://moebiusmania.github.io/edgemony-react-2021/",
+  "homepage": "https://github.com/Fablizio/facebrutproject",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
